--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,9 +22,12 @@ jobs:
       with:
         go-version: '1.24'
 
+    - name: Install X11 dependencies for Fyne
+      run: sudo apt-get update && sudo apt-get install -y libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev
+
     - name: Install dependencies
       run: |
-        go get .
+        go mod download
 
     - name: Build
       run: go build -v ./...
