add app-id to fyne-cross

--- a/.github/workflows/fyne-windows.yml
+++ b/.github/workflows/fyne-windows.yml
@@ -29,14 +29,14 @@ jobs:
     - name: Install dependencies
       run: |
         go mod download
-        
+
     - name: Install fyne-cross tool
       run: go install github.com/fyne-io/fyne-cross@latest
 
     - name: Run fyne-cross to build for Windows
       # This command builds the application for Windows (amd64) inside a Docker container.
       # The output will be in the 'dist' directory.
-      run: fyne-cross windows --arch amd64
+      run: fyne-cross windows --arch amd64 --app-id com.coralys.caesardisk
 
     - name: Upload Windows artifact
       uses: actions/upload-artifact@v4
