--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
           - goarch: "386"
             goos: darwin
           - goarch: arm64
-            goos: windows
+            goos: [windows, linux]
     steps:
     - uses: actions/checkout@v4
     - uses: wangyoucao577/go-release-action@v1
