--- a/.github/workflows/fyne-windows.yml
+++ b/.github/workflows/fyne-windows.yml
@@ -37,7 +37,8 @@ jobs:
       # This command builds the application for Windows (amd64) inside a Docker container.
       # The output will be in the 'dist' directory.
       run: |
-        cd cmd/gui-app fyne-cross windows --arch amd64 --app-id com.coralys.caesardisk
+        cd cmd/gui-app 
+        fyne-cross windows --arch amd64 --app-id com.coralys.caesardisk
 
     - name: Upload Windows artifact
       uses: actions/upload-artifact@v4
