--- a/.github/workflows/go-fyne.yml
+++ b/.github/workflows/go-fyne.yml
@@ -1,5 +1,6 @@
-# This workflow will build a golang project V3
+# This workflow will build a golang project V4
 # Builds a Fyne app on macOS, Linux & Windows forcing Bash shell on all of them.
+# Specify Go v1.21 or better so that Windows linker doesn't crap out!
 # ![Build](https://github.com/lordofscripts/REPOSITORYNAME/actions/workflows/go.yml/badge.svg)
 
 name: Go
@@ -17,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: ['', 'stable']
+        go-version: ['1.24', 'stable']
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
